--- a/src/main/resources/assets/germplasm/lang/ja_jp.lang
+++ b/src/main/resources/assets/germplasm/lang/ja_jp.lang
@@ -30,7 +30,7 @@ item.germplasm.redstorgham.name=レッドストルガム
 tile.germplasm.thresher.name=脱穀機
 tile.germplasm.microscope.name=顕微鏡
 tile.germplasm.research_desk.name=研究机
-tile.germplasm.genome_analyzer.name=遺伝子解析機
+tile.germplasm.genome_analyzer.name=ジェノタイパー
 tile.germplasm.reactor.name=バイオリアクター
 tile.germplasm.dna_extractor.name=DNA抽出機
 tile.germplasm.pcr.name=PCR
